--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kasama &#8211; Home</title>
     <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 
